--- a/acrh17.config
+++ b/acrh17.config
@@ -9,6 +9,8 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-rclone=y
 
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+
 CONFIG_PACKAGE_luci-app-jd-dailybonus=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_aria2=y
