--- a/acrh17m.config
+++ b/acrh17m.config
@@ -9,6 +9,8 @@ CONFIG_PACKAGE_6in4=y
 CONFIG_PACKAGE_luci-app-kodexplorer=y
 CONFIG_PACKAGE_luci-app-rclone=y
 
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+
 CONFIG_PACKAGE_luci-app-mwan3=y
 CONFIG_PACKAGE_luci-app-mwan3helper=y
 CONFIG_PACKAGE_luci-app-syncdial=y
