--- a/p2w_master.config
+++ b/p2w_master.config
@@ -31,7 +31,10 @@ CONFIG_PACKAGE_ddns-scripts_no-ip_com=y
 CONFIG_PACKAGE_ddns-scripts_nsupdate=y
 CONFIG_PACKAGE_ddns-scripts_route53-v1=y
 
-# CONFIG_PACKAGE_luci-app-dawn=y
+# CONFIG_PACKAGE_luci-app-dawn=
+
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
 CONFIG_PACKAGE_luci-app-frpc=y
