--- a/ax3600.config
+++ b/ax3600.config
@@ -5,7 +5,7 @@ CONFIG_TARGET_ipq807x_generic_DEVICE_xiaomi_ax3600=y
 CONFIG_PACKAGE_ipv6helper=y
 
 CONFIG_PACKAGE_luci-app-UUGameAcc=y
-CONFIG_PACKAGE_luci-app-alist=y
+# CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-argon-config is not set
 CONFIG_PACKAGE_luci-app-dnsfilter=y
 CONFIG_PACKAGE_luci-app-guest-wifi=y
