--- a/p2w_master.config
+++ b/p2w_master.config
@@ -34,7 +34,7 @@ CONFIG_PACKAGE_ddns-scripts_route53-v1=y
 # CONFIG_PACKAGE_luci-app-dawn=
 
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
-CONFIG_PACKAGE_luci-app-easymesh=y
+# CONFIG_PACKAGE_luci-app-easymesh=y
 
 CONFIG_PACKAGE_luci-app-aria2=y
 CONFIG_PACKAGE_luci-app-baidupcs-web=y
