--- a/.github/workflows/openwrt_p2w_master.yml
+++ b/.github/workflows/openwrt_p2w_master.yml
@@ -26,8 +26,8 @@ on:
   workflow_dispatch:
   #==========================
   #取消下方注释 = 每天凌晨4点编译
-  schedule:
-    - cron: 0 20 * * *
+  #schedule:
+  #  - cron: 0 20 * * *
   #==========================
 
 env:
